Add images and sorting ffor software and hardware

--- a/_posts/2015-05-15-taskky.markdown
+++ b/_posts/2015-05-15-taskky.markdown
@@ -4,10 +4,10 @@ title:  "Keen"
 date:   2016-09-01 16:41:12 +0800
 images:
 
-  - url: /images/keen.png
-    alt: keen
-    title: keen
-category: "Hardware"
+  - url: /images/taskky.png
+    alt: taskky
+    title: taskky
+category: "Software"
 github: 
 ---
 
